--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -2,6 +2,7 @@
 //––––––––––––––––––––––––––––––––––––––––––––––––––
 $primary-dark: #292D32;
 $primary-light: #fff;
+$green: #0DAD4D;
 
 // Font stack
 //––––––––––––––––––––––––––––––––––––––––––––––––––
