--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -12,6 +12,16 @@ $font-primary: 'Poppins', sans-serif;
 $body-font-size: 16px !default;
 
 
+// Colours
+$text-grey:#6e6c6c;
+$border-grey:#e3e4f3;
+$label-txt-blue:#697F9B;
+$dark-black:#000;
+$success-green:#0DAD4D;
+$border-grey-1:#B4BFCD;
+$btn-border-green:#7DE0A5;
+$light-green:#E7FFF0;
+$btn-green-text:#0DAD4D;
 // Breakpoints
 //––––––––––––––––––––––––––––––––––––––––––––––––––
 
