--- a/scss/home.scss
+++ b/scss/home.scss
@@ -11,6 +11,9 @@
         .img-block{
             flex-shrink: 0;
             margin-right: 30px;
+            img{
+                max-width: 145px;
+            }
         }
         .text-block{
             color: $primary-light;
@@ -95,5 +98,92 @@
                 color: #0DAD4D;
             }
         }
+    }
+}
+
+@media($sm-1679){
+    .card-sec .h-card-block {
+        padding: 20px 30px 40px;
+    }
+    .welcome-cover .content-block .text-block h4{
+        font-size: 21px;
+    }
+    .card-sec .h-card-block h2 {
+        font-size: 19px;
+        margin-bottom: 15px;
+    }
+    .card-sec .h-card-block .join-btn{
+        padding: 10px 15px;
+        font-size: 15px;
+    }
+}
+@media($sm-1441){
+    .card-sec .h-card-block {
+        padding: 15px 20px 30px;
+    }
+    .card-sec .h-card-block h2 {
+        font-size: 17px;
+        margin-bottom: 15px;
+    }
+    .welcome-cover .content-block .text-block h4{
+        font-size: 19px;
+    }
+    .welcome-cover{
+        padding: 20px 55px 25px;
+    }
+}
+@media($sm-1199){
+    .welcome-cover {
+        padding: 20px 30px 25px;
+    }
+    .welcome-cover .content-block .text-block h4 {
+        font-size: 18px;
+    }
+}
+@media($sm-767){
+    .card-sec .h-card-block .join-btn {
+        font-size: 14px;
+    }
+}
+
+@media($sm-579){
+    .welcome-cover .content-block .img-block {
+        flex-shrink: 0;
+        margin-right: 10px;
+    }
+    .welcome-cover {
+        padding: 20px 20px 25px;
+    }
+    .card-sec .h-card-block{
+        padding: 15px;
+    }
+    .card-sec .h-card-block p {
+        font-size: 13px;
+    }
+}
+
+@media($sm-479){
+    .welcome-cover .content-block{
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+    .welcome-cover .content-block .text-block{
+        order: 1;
+        padding-top: 0;
+    }
+    .welcome-cover .content-block .img-block{
+        order: 2;
+        padding-top: 25px;
+        text-align: center;
+        width: 100%;
+        img{
+            max-width: 100%;
+        }
+    }
+    .welcome-cover{
+        padding: 25px;
+    }
+    .welcome-cover .content-block .text-block p {
+        font-size: 12px;
     }
 }
