--- a/css/common.css
+++ b/css/common.css
@@ -97,6 +97,10 @@ button {
   box-shadow: none;
   border: none; }
 
+select, input {
+  outline: none;
+  box-shadow: none; }
+
 .btn-check:checked + .btn, .btn:first-child:active, :not(.btn-check) + .btn:active {
   color: inherit;
   background-color: transparent;
