--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -308,4 +308,95 @@
     justify-content: center;
     flex-shrink: 0; }
 
+@media (max-width: 1679px) {
+  .portfolio-sec .portfolio-card .title-wrapper .title-block h2 {
+    font-size: 18px; }
+
+  .portfolio-sec .portfolio-card .title-wrapper .title-block .title-icon img {
+    max-width: 21px; }
+
+  .portfolio-sec .portfolio-card {
+    padding: 20px; }
+
+  .portfolio-sec .portfolio-card .title-wrapper {
+    padding-bottom: 20px; }
+
+  .portfolio-sec .portfolio-card .my-portfolio-content .coin-det-cover {
+    padding-top: 25px; }
+
+  .portfolio-sec .portfolio-card .my-portfolio-content .coin-det-cover .coin-det-row .c-det .c-rate {
+    font-size: 18px; }
+
+  .portfolio-sec .portfolio-card .my-portfolio-content .coin-det-cover .coin-det-row .c-icon {
+    width: 50px;
+    height: 50px; }
+
+  .portfolio-sec .portfolio-card .my-portfolio-content .coin-det-cover .coin-det-row .c-icon img {
+    max-width: 27px; }
+
+  .portfolio-sec .portfolio-card .my-portfolio-content .coin-det-cover .coin-det-row {
+    margin-bottom: 25px; }
+
+  .portfolio-sec .portfolio-card .my-portfolio-content .sm-table-block .locked-title {
+    font-size: 13px;
+    padding: 10px 25px;
+    margin-bottom: 22px; }
+
+  .portfolio-sec .portfolio-card .my-portfolio-content .sm-table-block .locked-tab-row .tab-label {
+    font-size: 13px; }
+
+  .portfolio-sec .portfolio-card .my-portfolio-content .sm-table-block .locked-tab-row .tab-val {
+    font-size: 15px; }
+
+  .portfolio-sec .portfolio-card .my-portfolio-content .sm-table-block .locked-tab-row {
+    margin-bottom: 15px; }
+
+  .portfolio-sec .portfolio-card .my-portfolio-content .sm-table-block {
+    padding-bottom: 10px; }
+
+  .portfolio-sec .lg-graph .graph-det-top {
+    padding: 25px 20px 20px; }
+
+  .portfolio-sec .lg-graph .graph-table-block .graph-table tr td {
+    font-size: 13px; }
+
+  .portfolio-sec .lg-graph .graph-table-block .graph-table tr td:first-child {
+    padding-left: 35px; }
+
+  .portfolio-sec .lg-graph .graph-table-block .graph-table tr td:last-child {
+    padding-right: 35px; }
+
+  .portfolio-sec .lg-graph {
+    padding-bottom: 15px; }
+
+  .portfolio-sec .my-portfolio-col {
+    width: 420px; }
+
+  .portfolio-sec .portfolio-card .card-table th:first-child,
+  .portfolio-sec .portfolio-card .card-table td:first-child {
+    padding-left: 20px; }
+
+  .portfolio-sec .portfolio-card .card-table th:last-child,
+  .portfolio-sec .portfolio-card .card-table td:last-child {
+    padding-right: 20px; }
+
+  .portfolio-sec .portfolio-card .card-table th,
+  .portfolio-sec .portfolio-card .card-table td {
+    padding: 12px 10px;
+    font-size: 12px; }
+
+  .portfolio-sec .portfolio-card .card-table .claim-btn {
+    padding: 5px 18px;
+    font-size: 12px; }
+
+  .portfolio-sec .portfolio-card .title-wrapper .title-btn-block .select-block .sel-label {
+    font-size: 13px; }
+
+  .portfolio-sec .portfolio-card .title-wrapper .title-btn-block .select-block .title-sel {
+    font-size: 13px;
+    padding: 9px 18px; }
+
+  .portfolio-sec .portfolio-card .table-pagination-cover {
+    padding: 15px; } }
+
 /*# sourceMappingURL=portfolio.css.map */
